k-v based map draft, seems to work!