@@ -1,5 +1,6 @@
 package com.usatiuk.dhfs.objects;
 
+import com.usatiuk.dhfs.objects.persistence.IteratorStart;
 import io.quarkus.logging.Log;
 import org.apache.commons.lang3.tuple.Pair;
 
@@ -7,29 +8,78 @@ import java.util.*;
 
 public class MergingKvIterator<K extends Comparable<K>, V> implements CloseableKvIterator<K, V> {
     private final Map<CloseableKvIterator<K, V>, Integer> _iterators;
-    private final SortedMap<K, CloseableKvIterator<K, V>> _sortedIterators = new TreeMap<>();
+    private final NavigableMap<K, CloseableKvIterator<K, V>> _sortedIterators = new TreeMap<>();
     private final String _name;
 
-    public MergingKvIterator(String name, List<CloseableKvIterator<K, V>> iterators) {
+    public MergingKvIterator(String name, IteratorStart startType, K startKey, List<IterProdFn<K, V>> iterators) {
         _name = name;
+
+        IteratorStart initialStartType = startType;
+        K initialStartKey = startKey;
+        boolean fail = false;
+        if (startType == IteratorStart.LT || startType == IteratorStart.LE) {
+            // Starting at a greatest key less than/less or equal than:
+            // We have a bunch of iterators that have given us theirs "greatest LT/LE key"
+            // now we need to pick the greatest of those to start with
+            var initialIterators = iterators.stream().map(p -> p.get(initialStartType, initialStartKey)).toList();
+            try {
+                K initialMaxValue = initialIterators.stream()
+                        .filter(CloseableKvIterator::hasNext)
+                        .map((i) -> {
+                            var peeked = i.peekNextKey();
+//                            Log.warnv("peeked: {0}, from {1}", peeked, i.getClass());
+                            return peeked;
+                        })
+                        .max(Comparator.naturalOrder()).orElse(null);
+                if (initialMaxValue == null) {
+                    fail = true;
+                }
+                startKey = initialMaxValue;
+                startType = IteratorStart.GE;
+            } finally {
+                initialIterators.forEach(CloseableKvIterator::close);
+            }
+        }
+
+        if (fail) {
+            _iterators = Map.of();
+            return;
+        }
+
         int counter = 0;
         var iteratorsTmp = new HashMap<CloseableKvIterator<K, V>, Integer>();
-        for (CloseableKvIterator<K, V> iterator : iterators) {
+        for (var iteratorFn : iterators) {
+            var iterator = iteratorFn.get(startType, startKey);
             iteratorsTmp.put(iterator, counter++);
         }
-        _iterators = Collections.unmodifiableMap(iteratorsTmp);
+        _iterators = Map.copyOf(iteratorsTmp);
 
-        for (CloseableKvIterator<K, V> iterator : iterators) {
+        for (CloseableKvIterator<K, V> iterator : _iterators.keySet()) {
             advanceIterator(iterator);
         }
 
         Log.tracev("{0} Created: {1}", _name, _sortedIterators);
+        switch (initialStartType) {
+            case LT -> {
+                assert _sortedIterators.isEmpty() || _sortedIterators.firstKey().compareTo(initialStartKey) < 0;
+            }
+            case LE -> {
+                assert _sortedIterators.isEmpty() || _sortedIterators.firstKey().compareTo(initialStartKey) <= 0;
+            }
+            case GT -> {
+                assert _sortedIterators.isEmpty() || _sortedIterators.firstKey().compareTo(initialStartKey) > 0;
+            }
+            case GE -> {
+                assert _sortedIterators.isEmpty() || _sortedIterators.firstKey().compareTo(initialStartKey) >= 0;
+            }
+        }
     }
 
     @SafeVarargs
-    public MergingKvIterator(String name, CloseableKvIterator<K, V>... iterators) {
-        this(name, List.of(iterators));
+    public MergingKvIterator(String name, IteratorStart startType, K startKey, IterProdFn<K, V>... iterators) {
+        this(name, startType, startKey, List.of(iterators));
     }
+
 
     private void advanceIterator(CloseableKvIterator<K, V> iterator) {
         if (!iterator.hasNext()) {
@@ -49,6 +99,7 @@ public class MergingKvIterator<K extends Comparable<K>, V> implements CloseableK
             _sortedIterators.put(key, iterator);
             advanceIterator(them);
         } else {
+            Log.tracev("{0} Skipped: {1}", _name, iterator.peekNextKey());
             iterator.skip();
             advanceIterator(iterator);
         }
@@ -92,7 +143,7 @@ public class MergingKvIterator<K extends Comparable<K>, V> implements CloseableK
         }
         var curVal = cur.getValue().next();
         advanceIterator(cur.getValue());
-        Log.tracev("{0} Read from {1}: {2}, next: {3}", _name, cur.getValue(), curVal, _sortedIterators);
+//        Log.tracev("{0} Read from {1}: {2}, next: {3}", _name, cur.getValue(), curVal, _sortedIterators.keySet());
         return curVal;
     }
 
@@ -100,7 +151,7 @@ public class MergingKvIterator<K extends Comparable<K>, V> implements CloseableK
     public String toString() {
         return "MergingKvIterator{" +
                 "_name='" + _name + '\'' +
-                ", _sortedIterators=" + _sortedIterators +
+                ", _sortedIterators=" + _sortedIterators.keySet() +
                 ", _iterators=" + _iterators +
                 '}';
     }
